--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -113,7 +113,7 @@ jobs:
 
       - name: Login to GitHub Container Registry
         uses: docker/login-action@v2
-        if: github.event_name != 'pull_request'
+        if: github.event_name != 'pull_request'  # signing disabled for PRs because PRs from outside repos wont have access to your signing secret
         with:
           registry: ghcr.io
           username: ${{ github.actor }}
@@ -121,10 +121,10 @@ jobs:
 
       # Sign container
       - uses: sigstore/cosign-installer@v3.2.0
-        if: github.event_name != 'pull_request'
+        if: github.event_name != 'pull_request'  # signing disabled for PRs because PRs from outside repos wont have access to your signing secret
 
       - name: Sign container image
-        if: github.event_name != 'pull_request'
+        if: github.event_name != 'pull_request' # signing disabled for PRs because PRs from outside repos wont have access to your signing secret
         run: |
           cosign sign -y --key env://COSIGN_PRIVATE_KEY ${{ steps.registry_case.outputs.lowercase }}/${{ env.IMAGE_NAME }}@${TAGS}
         env:
